extract bidding properties to yaml file